--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header-container container-fluid px-3 px-md-4">
         <div class="logo">
             <a href="index.html">
-                <img src="/assets/img/logo.png" alt="Logo" width="60" height="60" />
+                <img src="../assets/img/logo.png" alt="Logo" width="60" height="60" />
             </a>
         </div>
         <nav aria-label="Main navigation">
@@ -43,7 +43,7 @@
         <div class="hero">
             <!-- Contenedor superior bg + foto en esquina inferior derecha -->
             <div class="hero-banner">
-                <img class="hero-photo" src="/assets/img/Photo.png" alt="Foto de perfil" width="223" height="220">
+                <img class="hero-photo" src="../assets/img/Photo.png" alt="Foto de perfil" width="223" height="220">
             </div>
 
             <!-- Contenido -->
