--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
         <!-- 3) Images container -->
         <div class="about-gallery">
-            <img src="assets/img/About image 03.png" alt="Imagen 3" class="about-img-small" />
-            <img src="assets/img/About image 02.png" alt="Imagen 4" class="about-img-small" />
-            <img src="assets/img/About image 01.png" alt="Imagen 5" class="about-img-small" />
+            <img src="..assets/img/About image 03.png" alt="Imagen 3" class="about-img-small" />
+            <img src="..assets/img/About image 02.png" alt="Imagen 4" class="about-img-small" />
+            <img src="..assets/img/About image 01.png" alt="Imagen 5" class="about-img-small" />
         </div>
     </section>
 
