--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!--  CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
-
-<!-- Header -->
-<header>
-    <div class="header-container container-fluid px-3 px-md-4">
-        <div class="logo">
-            <a href="index.html">
-                <img src="../assets/img/logo.png" alt="Logo" width="60" height="60" />
-            </a>
+    <!-- Header -->
+    <header>
+        <div class="header-container container-fluid px-3 px-md-4">
+            <div class="logo">
+                <a href="index.html">
+                    <!-- Asegúrate de que este archivo exista en assets/img/ -->
+                    <img src="assets/img/logo.png" alt="Logo" width="60" height="60" />
+                </a>
+            </div>
+            <nav aria-label="Main navigation">
+                <ul class="menu">
+                    <li><a href="index.html" class="btn btn-secondary active">Home</a></li>
+                    <li><a href="pages/about.html" class="btn btn-secondary">About</a></li>
+                    <li><a href="pages/services.html" class="btn btn-secondary">Services</a></li>
+                    <li><a href="pages/projects.html" class="btn btn-secondary">Projects</a></li>
+                    <li><a href="pages/contact.html" class="btn btn-secondary">Contact</a></li>
+                    <li><a href="pages/references.html" class="btn btn-secondary">References</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav aria-label="Main navigation">
-            <ul class="menu">
-                <li><a href="index.html" class="btn btn-secondary active">Home</a></li>
-                <li><a href="pages/about.html" class="btn btn-secondary">About</a></li>
-                <li><a href="pages/services.html" class="btn btn-secondary">Services</a></li>
-                <li><a href="pages/projects.html" class="btn btn-secondary">Projects</a></li>
-                <li><a href="pages/contact.html" class="btn btn-secondary">Contact</a></li>
-                <li><a href="pages/references.html" class="btn btn-secondary">References</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    </header>
 
     <!-- Home -->
     <section id="home" class="container-fluid p-0">
         <div class="hero">
             <!-- Contenedor superior bg + foto en esquina inferior derecha -->
             <div class="hero-banner">
-                <img class="hero-photo" src="../assets/img/Photo.png" alt="Foto de perfil" width="223" height="220">
+                <img class="hero-photo" src="assets/img/Photo.png" alt="Foto de perfil" width="223" height="220">
             </div>
 
             <!-- Contenido -->
@@ -58,8 +58,8 @@
 
                 <!-- Contenedor de botones -->
                 <div class="button-group">
-                    <a href="projects.html" class="btn btn-primary hero-primary">Check my work</a>
-                    <a href="contact.html" class="btn btn-secondary">Contact me</a>
+                    <a href="pages/projects.html" class="btn btn-primary hero-primary">Check my work</a>
+                    <a href="pages/contact.html" class="btn btn-secondary">Contact me</a>
                 </div>
             </div>
         </div>
@@ -125,9 +125,9 @@
 
         <!-- 3) Images container -->
         <div class="about-gallery">
-            <img src="..assets/img/About image 03.png" alt="Imagen 3" class="about-img-small" />
-            <img src="..assets/img/About image 02.png" alt="Imagen 4" class="about-img-small" />
-            <img src="..assets/img/About image 01.png" alt="Imagen 5" class="about-img-small" />
+            <img src="assets/img/About image 03.png" alt="Imagen 3" class="about-img-small" />
+            <img src="assets/img/About image 02.png" alt="Imagen 4" class="about-img-small" />
+            <img src="assets/img/About image 01.png" alt="Imagen 5" class="about-img-small" />
         </div>
     </section>
 
@@ -141,7 +141,7 @@
                 <!-- Card 1 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/services 1.png" alt="Icono diseño centrado en el usuario"
+                        <img src="assets/img/services 1.png" alt="Icono diseño centrado en el usuario"
                             class="service-icon" />
                         <h3>Diseño centrado en el usuario</h3>
                     </div>
@@ -154,7 +154,7 @@
                 <!-- Card 2 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
+                        <img src="assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
                         <h3>Prototipos interactivos</h3>
                     </div>
                     <p>
@@ -166,7 +166,7 @@
                 <!-- Card 3 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
+                        <img src="assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
                         <h3>Diseño visual</h3>
                     </div>
                     <p>
@@ -178,13 +178,12 @@
                 <!-- Card 4 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
+                        <img src="assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
                         <h3>Asesoramiento</h3>
                     </div>
                     <p>
                         Ofrezco asesoría personalizada para mejorar la experiencia y el diseño de tus productos
-                        digitales,
-                        optimizando usabilidad, accesibilidad y resultados según tus objetivos.
+                        digitales, optimizando usabilidad, accesibilidad y resultados según tus objetivos.
                     </p>
                 </div>
             </div>
@@ -238,7 +237,7 @@
         <div class="projects-list">
             <!-- project row 1 -->
             <div class="project">
-                <img src="/assets/img/Project 01.png" alt="Project 1" class="project-image">
+                <img src="assets/img/Project 01.png" alt="Project 1" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -252,7 +251,7 @@
 
             <!-- project row 2 -->
             <div class="project">
-                <img src="/assets/img/Project 02.png" alt="Project 2" class="project-image">
+                <img src="assets/img/Project 02.png" alt="Project 2" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -266,7 +265,7 @@
 
             <!-- project row 3 -->
             <div class="project">
-                <img src="/assets/img/Project 03.png" alt="Project 3" class="project-image">
+                <img src="assets/img/Project 03.png" alt="Project 3" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -280,7 +279,7 @@
 
             <!-- project row 4 -->
             <div class="project">
-                <img src="/assets/img/Project 04.png" alt="Project 4" class="project-image">
+                <img src="assets/img/Project 04.png" alt="Project 4" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -302,15 +301,13 @@
             <!-- Card 1 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-1.png" alt="Photo of Referrer 1"
+                    <img class="reference-photo" src="assets/img/Avatar-image-1.png" alt="Photo of Referrer 1"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
-                    <p>
-                        Desarrollo maquetas interactivas que ayudan a probar conceptos y flujos de
+                    <p>Desarrollo maquetas interactivas que ayudan a probar conceptos y flujos de
                         trabajo antes de la implementación, lo que facilita la toma de decisiones
-                        y mejora la eficiencia.
-                    </p>
+                        y mejora la eficiencia.</p>
                     <strong>Name - Puesto</strong>
                 </div>
             </article>
@@ -318,15 +315,13 @@
             <!-- Card 2 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-2.png" alt="Photo of Referrer 2"
+                    <img class="reference-photo" src="assets/img/Avatar-image-2.png" alt="Photo of Referrer 2"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
-                    <p>
-                        Mi enfoque como diseñador UX/UI incluye la creación de maquetas interactivas
+                    <p>Mi enfoque como diseñador UX/UI incluye la creación de maquetas interactivas
                         que permiten validar ideas y flujos de trabajo antes de su implementación,
-                        lo que resulta en decisiones más acertadas y un aumento en la eficiencia.
-                    </p>
+                        lo que resulta en decisiones más acertadas y un aumento en la eficiencia.</p>
                     <strong>Name - Puesto</strong>
                 </div>
             </article>
@@ -334,15 +329,13 @@
             <!-- Card 3 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-3.png" alt="Photo of Referrer 3"
+                    <img class="reference-photo" src="assets/img/Avatar-image-3.png" alt="Photo of Referrer 3"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
-                    <p>
-                        Como diseñador UX/UI, creo prototipos interactivos que permiten explorar ideas
+                    <p>Como diseñador UX/UI, creo prototipos interactivos que permiten explorar ideas
                         y flujos de usuario antes de llevarlos a cabo, optimizando el proceso de diseño
-                        y ayudando a tomar decisiones más informadas.
-                    </p>
+                        y ayudando a tomar decisiones más informadas.</p>
                     <strong>Name - Puesto</strong>
                 </div>
             </article>
@@ -350,15 +343,13 @@
             <!-- Card 4 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-4.png" alt="Photo of Referrer 4"
+                    <img class="reference-photo" src="assets/img/Avatar-image-4.png" alt="Photo of Referrer 4"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
-                    <p>
-                        En mi trabajo como diseñador UX/UI, desarrollo prototipos interactivos que
+                    <p>En mi trabajo como diseñador UX/UI, desarrollo prototipos interactivos que
                         facilitan la experimentación de conceptos y flujos de trabajo, mejorando así
-                        la toma de decisiones y la efectividad del proyecto.
-                    </p>
+                        la toma de decisiones y la efectividad del proyecto.</p>
                     <strong>Name - Puesto</strong>
                 </div>
             </article>
@@ -371,7 +362,7 @@
 
         <div class="contact-layout">
             <figure class="contact-media">
-                <img src="/assets/img/Contact photo.png" alt="Contact illustration">
+                <img src="assets/img/Contact photo.png" alt="Contact illustration">
             </figure>
 
             <form class="contact-form" action="#" method="post" novalidate>
@@ -426,13 +417,13 @@
     <footer class="container-fluid">
         <div class="social-icons" aria-label="Social links">
             <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="/assets/img/WhatsappLogo.png" alt="WhatsApp">
+                <img src="assets/img/WhatsappLogo.png" alt="WhatsApp">
             </a>
             <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="/assets/img/LinkedinLogo.png" alt="LinkedIn">
+                <img src="assets/img/LinkedinLogo.png" alt="LinkedIn">
             </a>
             <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="/assets/img/BehanceLogo.png" alt="Behance">
+                <img src="assets/img/BehanceLogo.png" alt="Behance">
             </a>
         </div>
 
