--- a/pages/about.html
+++ b/pages/about.html
@@ -101,13 +101,13 @@
     <footer class="container-fluid">
         <div class="social-icons" aria-label="Social links">
             <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="/assets/img/WhatsappLogo.png" alt="WhatsApp">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
             </a>
             <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="/assets/img/LinkedinLogo.png" alt="LinkedIn">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
             </a>
             <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="/assets/img/BehanceLogo.png" alt="Behance">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance">
             </a>
         </div>
 
