correcion iconos footer no index

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -92,18 +92,19 @@
 
 
     <!-- Footer -->
-    <footer class="container-fluid">
-        <div class="social-icons" aria-label="Social links">
-            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
-            </a>
-            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
-            </a>
-            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="../assets/img/BehanceLogo.png" alt="Behance">
-            </a>
-        </div>
+<footer class="container-fluid">
+    <div class="social-icons" aria-label="Social links">
+        <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
+            <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
+        </a>
+        <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
+            <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
+        </a>
+        <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
+            <img src="../assets/img/BehanceLogo.png" alt="Behance">
+        </a>
+    </div>
+</footer>
 
         <p class="footer-cta">Hey, what’s holding you back from dropping me a text? :)</p>
         <p class="copyright">© 2025 copyright all right reserved</p>
