--- a/pages/services.html
+++ b/pages/services.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Servicios — Matías Lovecchio</title>
+
+    <!-- Bootstrap CSS (igual que en index) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Tu CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
+
 <body>
 
-    
-                <!-- Header -->
-<header>
-    <div class="header-container container-fluid px-3 px-md-4">
-        <div class="logo">
-            <a href="../index.html">
-                <img src="/assets/img/logo.png" alt="Logo" width="60" height="60" />
-            </a>
+    <!-- Header -->
+    <header>
+        <div class="header-container container-fluid px-3 px-md-4">
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../assets/img/logo.png" alt="Logo" width="60" height="60" />
+                </a>
+            </div>
+            <nav aria-label="Main navigation">
+                <ul class="menu">
+                    <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
+                    <li><a href="about.html" class="btn btn-secondary">About</a></li>
+                    <li><a href="services.html" class="btn btn-secondary active">Services</a></li>
+                    <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
+                    <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
+                    <li><a href="references.html" class="btn btn-secondary">References</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav aria-label="Main navigation">
-            <ul class="menu">
-                <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
-                <li><a href="about.html" class="btn btn-secondary">About</a></li>
-                <li><a href="services.html" class="btn btn-secondary active">Services</a></li>
-                <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
-                <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
-                <li><a href="references.html" class="btn btn-secondary">References</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
+    </header>
 
     <!-- Services -->
     <section id="services" class="container-fluid">
@@ -41,7 +47,7 @@
                 <!-- Card 1 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/services 1.png" alt="Icono diseño centrado en el usuario"
+                        <img src="../assets/img/services 1.png" alt="Icono diseño centrado en el usuario"
                             class="service-icon" />
                         <h3>Diseño centrado en el usuario</h3>
                     </div>
@@ -54,7 +60,7 @@
                 <!-- Card 2 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
+                        <img src="../assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
                         <h3>Prototipos interactivos</h3>
                     </div>
                     <p>
@@ -66,7 +72,7 @@
                 <!-- Card 3 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
+                        <img src="../assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
                         <h3>Diseño visual</h3>
                     </div>
                     <p>
@@ -78,13 +84,12 @@
                 <!-- Card 4 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="/assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
+                        <img src="../assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
                         <h3>Asesoramiento</h3>
                     </div>
                     <p>
                         Ofrezco asesoría personalizada para mejorar la experiencia y el diseño de tus productos
-                        digitales,
-                        optimizando usabilidad, accesibilidad y resultados según tus objetivos.
+                        digitales, optimizando usabilidad, accesibilidad y resultados según tus objetivos.
                     </p>
                 </div>
             </div>
@@ -132,18 +137,24 @@
     </section>
 
     <!-- Footer -->
-<footer class="container-fluid">
-    <div class="social-icons" aria-label="Social links">
-        <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-            <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
-        </a>
-        <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-            <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
-        </a>
-        <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-            <img src="../assets/img/BehanceLogo.png" alt="Behance">
-        </a>
-    </div>
-</footer>
+    <footer class="container-fluid">
+        <div class="social-icons" aria-label="Social links">
+            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
+            </a>
+            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
+            </a>
+            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance">
+            </a>
+        </div>
+    </footer>
+
+    <!-- (Opcional) Bootstrap JS si usas componentes interactivos -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
