--- a/pages/services.html
+++ b/pages/services.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Servicios — Matías Lovecchio</title>
 
-    <!-- Bootstrap CSS (igual que en index) -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Tu CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 
@@ -149,9 +149,11 @@
                 <img src="../assets/img/BehanceLogo.png" alt="Behance">
             </a>
         </div>
+
+        <p class="footer-cta">Hey, what’s holding you back from dropping me a text? :)</p>
+        <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
 
-    <!-- (Opcional) Bootstrap JS si usas componentes interactivos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
