--- a/pages/services.html
+++ b/pages/services.html
@@ -39,7 +39,7 @@
 
     <!-- Services -->
     <section id="services" class="container-fluid">
-        <!-- 1) Services (cards) -->
+        <!-- 1) Services  -->
         <div class="svc-block">
             <h2 class="section-title">Servicios</h2>
 
@@ -51,10 +51,8 @@
                             class="service-icon" />
                         <h3>Diseño centrado en el usuario</h3>
                     </div>
-                    <p>
-                        Cada proyecto parte de la empatía con el usuario para crear interfaces intuitivas,
-                        accesibles y fáciles de navegar.
-                    </p>
+                    <p>Cada proyecto parte de la empatía con el usuario para crear interfaces intuitivas,
+                        accesibles y fáciles de navegar.</p>
                 </div>
 
                 <!-- Card 2 -->
@@ -63,10 +61,8 @@
                         <img src="../assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
                         <h3>Prototipos interactivos</h3>
                     </div>
-                    <p>
-                        Realizo prototipos funcionales que permiten validar ideas y flujos antes del desarrollo,
-                        ahorrando tiempo y optimizando resultados.
-                    </p>
+                    <p>Realizo prototipos funcionales que permiten validar ideas y flujos antes del desarrollo,
+                        ahorrando tiempo y optimizando resultados.</p>
                 </div>
 
                 <!-- Card 3 -->
@@ -75,10 +71,8 @@
                         <img src="../assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
                         <h3>Diseño visual</h3>
                     </div>
-                    <p>
-                        Cuido la estética cuidando cada detalle, desde la tipografía hasta la paleta de colores,
-                        para generar una identidad visual única y memorable.
-                    </p>
+                    <p>Cuido la estética cuidando cada detalle, desde la tipografía hasta la paleta de colores,
+                        para generar una identidad visual única y memorable.</p>
                 </div>
 
                 <!-- Card 4 -->
@@ -87,10 +81,8 @@
                         <img src="../assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
                         <h3>Asesoramiento</h3>
                     </div>
-                    <p>
-                        Ofrezco asesoría personalizada para mejorar la experiencia y el diseño de tus productos
-                        digitales, optimizando usabilidad, accesibilidad y resultados según tus objetivos.
-                    </p>
+                    <p>Ofrezco asesoría personalizada para mejorar la experiencia y el diseño de tus productos
+                        digitales, optimizando usabilidad, accesibilidad y resultados según tus objetivos.</p>
                 </div>
             </div>
         </div>
@@ -98,7 +90,6 @@
         <!-- 2) Hard Skills -->
         <div class="svc-block">
             <h2 class="section-title">Hard Skills</h2>
-
             <div class="skills-box">
                 <div class="chips-row row1">
                     <span class="tag">UI Design</span>
@@ -136,7 +127,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer  -->
     <footer class="container-fluid">
         <div class="social-icons" aria-label="Social links">
             <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
@@ -154,6 +145,7 @@
         <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
 
+    <!-- JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
