--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,22 +91,27 @@
 
 
 
-    <!-- Footer -->
+    <!-- Footer  -->
     <footer class="container-fluid">
         <div class="social-icons" aria-label="Social links">
             <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="/assets/img/WhatsappLogo.png" alt="WhatsApp">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
             </a>
             <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="/assets/img/LinkedinLogo.png" alt="LinkedIn">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
             </a>
             <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="/assets/img/BehanceLogo.png" alt="Behance">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance">
             </a>
         </div>
-        
+
         <p class="footer-cta">Hey, what’s holding you back from dropping me a text? :)</p>
         <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
+
+    <!-- JS de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
