arreglo imagenes secciones projects y references

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
 
         <div class="contact-layout">
             <figure class="contact-media">
-                <img src="/assets/img/Contact photo.png" alt="Contact illustration">
+                <img src="../assets/img/Contact photo.png" alt="Contact illustration">
             </figure>
 
             <form class="contact-form" action="#" method="post" novalidate>
