--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,7 +40,7 @@
         <div class="projects-list">
             <!-- project row 1 -->
             <div class="project">
-                <img src="/assets/img/Project 01.png" alt="Project 1" class="project-image">
+                <img src="../assets/img/Project 01.png" alt="Project 1" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -54,7 +54,7 @@
 
             <!-- project row 2 -->
             <div class="project">
-                <img src="/assets/img/Project 02.png" alt="Project 2" class="project-image">
+                <img src="../assets/img/Project 02.png" alt="Project 2" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
@@ -68,7 +68,7 @@
 
             <!-- project row 3 -->
             <div class="project">
-                <img src="/assets/img/Project 03.png" alt="Project 3" class="project-image">
+                <img src="../assets/img/Project 03.png" alt="Project 3" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
