arreglo imagenes contact y services

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -82,7 +82,7 @@
 
             <!-- project row 4 -->
             <div class="project">
-                <img src="/assets/img/Project 04.png" alt="Project 4" class="project-image">
+                <img src="../assets/img/Project 04.png" alt="Project 4" class="project-image">
                 <div class="cell name">
                     <h3>Project Name</h3>
                 </div>
