ruta de imagenes

--- a/pages/references.html
+++ b/pages/references.html
@@ -37,7 +37,7 @@
             <!-- Card 1 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-1.png" alt="Photo of Referrer 1"
+                    <img class="reference-photo" src="../assets/img/Avatar-image-1.png" alt="Photo of Referrer 1"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
@@ -53,7 +53,7 @@
             <!-- Card 2 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-2.png" alt="Photo of Referrer 2"
+                    <img class="reference-photo" src="../assets/img/Avatar-image-2.png" alt="Photo of Referrer 2"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
@@ -69,7 +69,7 @@
             <!-- Card 3 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-3.png" alt="Photo of Referrer 3"
+                    <img class="reference-photo" src="../assets/img/Avatar-image-3.png" alt="Photo of Referrer 3"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
@@ -85,7 +85,7 @@
             <!-- Card 4 -->
             <article class="ref-card">
                 <div class="ref-head">
-                    <img class="reference-photo" src="/assets/img/Avatar-image-4.png" alt="Photo of Referrer 4"
+                    <img class="reference-photo" src="../assets/img/Avatar-image-4.png" alt="Photo of Referrer 4"
                         loading="lazy" />
                 </div>
                 <div class="ref-box">
