chore: actualizar estilos SCSS y navbar activo

--- a/pages/references.html
+++ b/pages/references.html
@@ -1,181 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>References</title>
-    <link rel="stylesheet" href="../assets/css/style.css?v=2" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
+  <title>References — Matías Lovecchio Skamelka</title>
+  <meta name="description" content="Comentarios y testimonios de colegas, líderes y clientes sobre el trabajo de Matías Lovecchio Skamelka en UX/UI y diseño industrial." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://dimatiaslovecchio.xo.je/pages/references.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_AR" />
+  <meta property="og:site_name" content="Matías Lovecchio Skamelka — Portfolio" />
+  <meta property="og:title" content="References — Matías Lovecchio Skamelka" />
+  <meta property="og:description" content="Testimonios sobre colaboración, comunicación y enfoque user-first." />
+  <meta property="og:url" content="https://dimatiaslovecchio.xo.je/pages/references.html" />
+  <meta property="og:image" content="https://dimatiaslovecchio.xo.je/assets/img/og-image.png" />
+  <meta property="og:image:alt" content="Vista previa del portfolio de Matías Lovecchio Skamelka" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Favicon (PNG) -->
+  <link rel="icon" type="image/png" href="../assets/img/favicon.png" sizes="32x32" />
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="../assets/css/style.css?v=3" />
 </head>
 
-<body>
-    <!-- Header -->
-    <header>
-        <div class="header-container container-fluid px-3 px-md-4">
-            <div class="logo">
-                <a href="../index.html">
-                    <img src="../assets/img/logo.png" alt="Logo" width="60" height="60" />
-                </a>
-            </div>
-            <nav aria-label="Main navigation">
-                <ul class="menu">
-                    <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
-                    <li><a href="about.html" class="btn btn-secondary">About</a></li>
-                    <li><a href="services.html" class="btn btn-secondary">Services</a></li>
-                    <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
-                    <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
-                    <li><a href="references.html" class="btn btn-secondary active">References</a></li>
-                </ul>
-            </nav>
+<!-- Página: referencias -->
+<body class="references-page">
+  <!-- Accesibilidad: salto a contenido -->
+  <a class="visually-hidden-focusable" href="#references">Saltar al contenido</a>
+
+  <!-- Header -->
+  <header role="banner">
+    <div class="header-container container-fluid px-3 px-md-4">
+      <div class="logo">
+        <a href="../index.html" aria-label="Ir al inicio">
+          <img src="../assets/img/logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60" decoding="async" />
+        </a>
+      </div>
+      <nav aria-label="Navegación principal">
+        <ul class="menu">
+          <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
+          <li><a href="about.html" class="btn btn-secondary">About</a></li>
+          <li><a href="services.html" class="btn btn-secondary">Services</a></li>
+          <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
+          <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
+          <li><a href="references.html" class="btn btn-secondary active" aria-current="page">References</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- References -->
+  <section id="references" class="container-fluid">
+    <div class="nav-spacer" aria-hidden="true"></div>
+
+    <!-- Encabezado de sección -->
+    <div class="section-head refs-head">
+      <h1 class="section-title">References</h1>
+      <div class="desc-rail">
+        <p class="section-desc">
+          These are a few words from people I’ve worked with—managers, teammates, clients & friends. Their feedback highlights collaboration, clear communication, and a user-first mindset, reminding me that good design is always a team effort.
+        </p>
+      </div>
+    </div>
+
+    <!-- Grid de referencias -->
+    <div class="refs-grid">
+      <!-- Card 1 -->
+      <article class="ref-card">
+        <div class="ref-head">
+          <img class="reference-photo" src="../assets/img/Avatar-image-1.png" alt="Retrato de Eli, Product Manager" loading="lazy" decoding="async" />
         </div>
-    </header>
-
-    <!-- References -->
-    <section id="references" class="container-fluid">
-        <h2 class="section-title">References</h2>
-
-        <div class="refs-marquee" role="list" aria-label="Lista de referencias">
-            <div class="refs-track">
-
-                <span class="track-spacer" aria-hidden="true"></span>
-
-                <!-- ====== LOTE A ====== -->
-                <article class="ref-card" role="listitem">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-1.png" alt="Photo of Referrer 1"
-                            loading="lazy" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>Su capacidad para transformar una idea inicial en un producto visualmente atractivo y funcional superó nuestras expectativas. Nos guió en cada etapa con claridad y compromiso.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-2.png" alt="Photo of Referrer 2"
-                            loading="lazy" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>La colaboración fue muy enriquecedora: comprendió rápidamente lo que necesitábamos, propuso soluciones innovadoras y cuidó cada detalle del diseño final. Sin dudas, lo recomendaría</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-3.png" alt="Photo of Referrer 3"
-                            loading="lazy" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>Trabajar juntos nos permitió lograr un resultado sólido y coherente. No solo aportó su conocimiento técnico, sino también una mirada estratégica que ayudó a mejorar la experiencia del usuario en nuestro servicio digital.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-4.png" alt="Photo of Referrer 4"
-                            loading="lazy" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>En mi trabajo como diseñador UX/UI, desarrollo prototipos interactivos que facilitan la
-                                experimentación de conceptos y flujos de trabajo, mejorando así la toma de decisiones y
-                                la efectividad del proyecto.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <!-- ====== LOTE B (duplicado para loop infinito) ====== -->
-                <article class="ref-card" role="listitem" aria-hidden="true">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-1.png" alt="" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>Desarrollo maquetas interactivas que ayudan a probar conceptos y flujos de trabajo antes
-                                de la implementación, lo que facilita la toma de decisiones y mejora la eficiencia.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem" aria-hidden="true">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-2.png" alt="" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>Mi enfoque como diseñador UX/UI incluye la creación de maquetas interactivas que permiten
-                                validar ideas y flujos de trabajo antes de su implementación, lo que resulta en
-                                decisiones más acertadas y un aumento en la eficiencia.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem" aria-hidden="true">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-3.png" alt="" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>Como diseñador UX/UI, creo prototipos interactivos que permiten explorar ideas y flujos
-                                de usuario antes de llevarlos a cabo, optimizando el proceso de diseño y ayudando a
-                                tomar decisiones más informadas.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-                <article class="ref-card" role="listitem" aria-hidden="true">
-                    <div class="ref-head">
-                        <img class="reference-photo" src="../assets/img/Avatar-image-4.png" alt="" />
-                    </div>
-                    <div class="ref-box">
-                        <div class="ref-content">
-                            <p>En mi trabajo como diseñador UX/UI, desarrollo prototipos interactivos que facilitan la
-                                experimentación de conceptos y flujos de trabajo, mejorando así la toma de decisiones y
-                                la efectividad del proyecto.</p>
-                            <strong>Name — Puesto</strong>
-                        </div>
-                    </div>
-                </article>
-
-            </div>
+        <div class="ref-box">
+          <div class="ref-content">
+            <p>"Their ability to turn an initial idea into a visually appealing and functional product exceeded our expectations. They guided us through every stage with clarity and commitment."</p>
+            <strong>Eli — Product Manager</strong>
+          </div>
         </div>
-    </section>
+      </article>
 
-    <!-- Footer -->
-    <footer class="container-fluid">
-        <div class="social-icons" aria-label="Social links">
-            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
-            </a>
-            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
-            </a>
-            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="../assets/img/BehanceLogo.png" alt="Behance">
-            </a>
+      <!-- Card 2 -->
+      <article class="ref-card">
+        <div class="ref-head">
+          <img class="reference-photo" src="../assets/img/Avatar-image-2.png" alt="Retrato de Daniel, CTO" loading="lazy" decoding="async" />
         </div>
+        <div class="ref-box">
+          <div class="ref-content">
+            <p>"The collaboration was very enriching: they quickly understood what we needed, proposed innovative solutions, and took care of every detail of the final design. Without a doubt, I would recommend them."</p>
+            <strong>Daniel — CTO</strong>
+          </div>
+        </div>
+      </article>
 
-        <p class="footer-cta">Hey, what’s holding you back from dropping me a text? :)</p>
-        <p class="copyright">© 2025 copyright all right reserved</p>
-    </footer>
+      <!-- Card 3 -->
+      <article class="ref-card">
+        <div class="ref-head">
+          <img class="reference-photo" src="../assets/img/Avatar-image-3.png" alt="Retrato de Laura, UX Research Lead" loading="lazy" decoding="async" />
+        </div>
+        <div class="ref-box">
+          <div class="ref-content">
+            <p>“Working together allowed us to achieve a solid and coherent result. They contributed technical knowledge and a strategic perspective that improved the user experience.”</p>
+            <strong>Laura — UX Research Lead</strong>
+          </div>
+        </div>
+      </article>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+      <!-- Card 4 -->
+      <article class="ref-card">
+        <div class="ref-head">
+          <img class="reference-photo" src="../assets/img/Avatar-image-4.png" alt="Retrato de Miguel, Dev College" loading="lazy" decoding="async" />
+        </div>
+        <div class="ref-box">
+          <div class="ref-content">
+            <p>“I was impressed by the creativity of the proposal and how they adapted it to our specific needs.”</p>
+            <strong>Miguel — Dev College</strong>
+          </div>
+        </div>
+      </article>
+
+      <!-- Card 5 -->
+      <article class="ref-card">
+        <div class="ref-head">
+          <img class="reference-photo" src="../assets/img/Avatar-image-5.png" alt="Retrato de Ema, Head of Design" loading="lazy" decoding="async" />
+        </div>
+        <div class="ref-box">
+          <div class="ref-content">
+            <p>Professional from start to finish. The interaction was straightforward and the results were top-notch.</p>
+            <strong>Ema — Head of Design</strong>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="container-fluid">
+    <div class="social-icons" aria-label="Enlaces a redes">
+      <a href="https://wa.me/5493512630020" target="_blank" rel="noopener noreferrer">
+        <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp" loading="lazy" decoding="async" />
+      </a>
+      <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener noreferrer">
+        <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn" loading="lazy" decoding="async" />
+      </a>
+      <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener noreferrer">
+        <img src="../assets/img/BehanceLogo.png" alt="Behance" loading="lazy" decoding="async" />
+      </a>
+    </div>
+    <p class="footer-cta">Hey, what’s holding you back from dropping me a text? :)</p>
+    <p class="copyright">© 2025 copyright all right reserved</p>
+  </footer>
+
+  <!-- JS (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
