--- a/pages/about.html
+++ b/pages/about.html
@@ -1,113 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO básico -->
+    <title>About — Matías Lovecchio Skamelka | UX/UI & Industrial Designer</title>
+    <meta name="description"
+        content="Conoce a Matías Lovecchio Skamelka: diseñador UX/UI e industrial. Experiencia en logística, docencia en Morfología y enfoque en usabilidad, prototipos y diseño visual." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://dimatiaslovecchio.xo.je/pages/about.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:site_name" content="Matías Lovecchio Skamelka — Portfolio" />
+    <meta property="og:title" content="About — Matías Lovecchio Skamelka" />
+    <meta property="og:description"
+        content="Perfil profesional: UX/UI & Industrial Designer. Experiencia en productos digitales, usabilidad y prototipado." />
+    <meta property="og:url" content="https://dimatiaslovecchio.xo.je/pages/about.html" />
+    <meta property="og:image" content="https://dimatiaslovecchio.xo.je/assets/img/og-image.png" />
+    <meta property="og:image:alt" content="Vista previa del portfolio de Matías Lovecchio Skamelka" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Favicon (PNG) -->
+    <link rel="icon" type="image/png" href="../assets/img/favicon.png" sizes="32x32">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
+
 <body>
 
-<!-- Header -->
-<header>
-    <div class="header-container container-fluid px-3 px-md-4">
-        <div class="logo">
-            <a href="../index.html">
-                <img src="/assets/img/logo.png" alt="Logo" width="60" height="60" />
-            </a>
+    <!-- Accesibilidad: salto a contenido -->
+    <a class="visually-hidden-focusable" href="#about">Saltar al contenido</a>
+
+    <!-- Header -->
+    <header role="banner">
+        <div class="header-container container-fluid px-3 px-md-4">
+            <div class="logo">
+                <a href="../index.html" aria-label="Ir al inicio">
+                    <img src="../assets/img/logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60"
+                        decoding="async" />
+                </a>
+            </div>
+            <nav aria-label="Navegación principal">
+                <ul class="menu">
+                    <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
+                    <li><a href="about.html" class="btn btn-secondary active" aria-current="page">About</a></li>
+                    <li><a href="services.html" class="btn btn-secondary">Services</a></li>
+                    <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
+                    <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
+                    <li><a href="references.html" class="btn btn-secondary">References</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav aria-label="Main navigation">
-            <ul class="menu">
-                <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
-                <li><a href="about.html" class="btn btn-secondary active">About</a></li>
-                <li><a href="services.html" class="btn btn-secondary">Services</a></li>
-                <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
-                <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
-                <li><a href="references.html" class="btn btn-secondary">References</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    </header>
 
-
-<!-- About -->
-<section id="about" class="about container-fluid">
-    <!-- 1) Pic + about container -->
-    <div class="about-hero">
-        <img src="../assets/img/About%20image%2005.png" alt="Imagen 1 about" class="about-hero-img" />
-
-        <div class="about-hero-copy">
-            <h2 class="section-title">About</h2>
-
-            <div class="about-paragraph">
-                <p>
-                    Hi there! I'm Mati, a passionate software developer with a love for creating innovative
-                    solutions. When I'm not coding, you can find me hiking in the mountains or experimenting
-                    with new recipes in the kitchen. I thrive on collaboration and enjoy sharing ideas with others.
-                </p>
+    <!-- About -->
+    <section id="about" class="about container-fluid">
+        <!-- Hero + texto -->
+        <div class="about-hero">
+            <img src="../assets/img/About image 05.png" alt="Ilustración botánica en escala de grises"
+                class="about-hero-img" loading="lazy" decoding="async" />
+            <div class="about-hero-copy">
+                <h1 class="section-title">About</h1>
+                <div class="about-paragraph">
+                    <p>✨ Hi! I'm Mati, an industrial designer specialized in UX/UI.</p>
+                    <p>I'm passionate about creating attractive and functional digital experiences, seeking a balance
+                        between clean geometry, intuitive interaction, and real value for the user.</p>
+                    <p>Today, I'm part of a software development team focused on logistics optimization, and I also
+                        teach Morphology at a university, where I enjoy sharing and learning alongside my students.</p>
+                    <p>I combine my experience in industrial design with my UX/UI approach to transform ideas into
+                        clear, useful, and impactful solutions.</p>
+                </div>
+                <a href="#" class="btn">CHECK MY RESUME</a>
             </div>
-
-            <a href="#" class="btn">CHECK MY RESUME</a>
         </div>
-    </div>
 
-    <!-- 2) Photo + Personal data -->
-    <div class="about-personal">
-        <img src="../assets/img/About%20image%2004.png" alt="Imagen 2 sobre mí" class="about-personal-img" />
-
-        <div class="data-container">
-            <div class="data-row">
-                <div class="data-label">Age</div>
-                <div class="data-value">30 yo</div>
-            </div>
-
-            <div class="data-row">
-                <div class="data-label">Location</div>
-                <div class="data-value">Córdoba, Argentina</div>
-            </div>
-
-            <div class="data-row">
-                <div class="data-label">Phone</div>
-                <div class="data-value"><a href="https://wa.me/5493512630020">+543512630020</a></div>
-            </div>
-
-            <div class="data-row">
-                <div class="data-label">Email</div>
-                <div class="data-value">
-                    <a href="mailto:matias.lovecchio@hotmail.com">matias.lovecchio@gmail.com</a>
+        <!-- Datos personales -->
+        <div class="about-personal">
+            <img src="../assets/img/About image 04.png" alt="Detalle botánico en grafito" class="about-personal-img"
+                loading="lazy" decoding="async" />
+            <div class="data-container">
+                <div class="data-row">
+                    <div class="data-label">Age</div>
+                    <div class="data-value">30 yo</div>
+                </div>
+                <div class="data-row">
+                    <div class="data-label">Location</div>
+                    <div class="data-value">Córdoba, Argentina</div>
+                </div>
+                <div class="data-row">
+                    <div class="data-label">Phone</div>
+                    <div class="data-value"><a href="https://wa.me/5493512630020" rel="noopener noreferrer">+54 9 351
+                            263 0020</a></div>
+                </div>
+                <div class="data-row">
+                    <div class="data-label">Email</div>
+                    <div class="data-value"><a href="mailto:matias.lovecchio@gmail.com">matias.lovecchio@gmail.com</a>
+                    </div>
+                </div>
+                <div class="data-row">
+                    <div class="data-label">Social</div>
+                    <div class="data-value">
+                        <a href="https://www.linkedin.com/in/lovecchiomatias/" rel="noopener noreferrer">LinkedIn</a> |
+                        <a href="https://www.behance.net/matiaslovecchio" rel="noopener noreferrer">Behance</a>
+                    </div>
                 </div>
             </div>
-
-            <div class="data-row">
-                <div class="data-label">Social</div>
-                <div class="data-value">
-                    <a href="https://www.linkedin.com/in/lovecchiomatias/">Linkedin</a> |
-                    <a href="https://www.behance.net/matiaslovecchio">Behance</a>
-                </div>
-            </div>
         </div>
-    </div>
 
-    <!-- 3) Images container -->
-    <div class="about-gallery">
-        <img src="../assets/img/About%20image%2003.png" alt="Imagen 3" class="about-img-small" />
-        <img src="../assets/img/About%20image%2002.png" alt="Imagen 4" class="about-img-small" />
-        <img src="../assets/img/About%20image%2001.png" alt="Imagen 5" class="about-img-small" />
-    </div>
-</section>
+        <!-- Galería -->
+        <div class="about-gallery">
+            <img src="../assets/img/About image 03.png" alt="Ilustración botánica 1" class="about-img-small"
+                loading="lazy" decoding="async" />
+            <img src="../assets/img/About image 02.png" alt="Ilustración botánica 2" class="about-img-small"
+                loading="lazy" decoding="async" />
+            <img src="../assets/img/About image 01.png" alt="Ilustración botánica 3" class="about-img-small"
+                loading="lazy" decoding="async" />
+        </div>
+    </section>
 
-
-    <!-- Footer  -->
+    <!-- Footer -->
     <footer class="container-fluid">
-        <div class="social-icons" aria-label="Social links">
-            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
+        <div class="social-icons" aria-label="Enlaces a redes">
+            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp" loading="lazy" decoding="async">
             </a>
-            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
+            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn" loading="lazy" decoding="async">
             </a>
-            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="../assets/img/BehanceLogo.png" alt="Behance">
+            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance" loading="lazy" decoding="async">
             </a>
         </div>
 
@@ -115,10 +141,9 @@
         <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
 
-    <!-- JS de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
 </body>
+
 </html>
