--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,107 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO básico -->
+    <title>Contact — Matías Lovecchio Skamelka</title>
+    <meta name="description"
+        content="Escríbeme sobre proyectos de UX/UI, prototipado o consultoría. Respondo con una propuesta ajustada a objetivos y plazos." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://dimatiaslovecchio.xo.je/pages/contact.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:site_name" content="Matías Lovecchio Skamelka — Portfolio" />
+    <meta property="og:title" content="Contact — Matías Lovecchio Skamelka" />
+    <meta property="og:description" content="Hablemos sobre tu proyecto: objetivos, usuarios y plazos." />
+    <meta property="og:url" content="https://dimatiaslovecchio.xo.je/pages/contact.html" />
+    <meta property="og:image" content="https://dimatiaslovecchio.xo.je/assets/img/og-image.png" />
+    <meta property="og:image:alt" content="Vista previa del portfolio de Matías Lovecchio Skamelka" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Favicon (PNG) -->
+    <link rel="icon" type="image/png" href="../assets/img/favicon.png" sizes="32x32">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
+
 <body>
 
-    
-            <!-- Header -->
-<header>
-    <div class="header-container container-fluid px-3 px-md-4">
-        <div class="logo">
-            <a href="../index.html">
-                <img src="/assets/img/logo.png" alt="Logo" width="60" height="60" />
-            </a>
+    <!-- Accesibilidad: salto a contenido -->
+    <a class="visually-hidden-focusable" href="#contact">Saltar al contenido</a>
+
+    <!-- Header -->
+    <header role="banner">
+        <div class="header-container container-fluid px-3 px-md-4">
+            <div class="logo">
+                <a href="../index.html" aria-label="Ir al inicio">
+                    <img src="../assets/img/logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60"
+                        decoding="async" />
+                </a>
+            </div>
+            <nav aria-label="Navegación principal">
+                <ul class="menu">
+                    <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
+                    <li><a href="about.html" class="btn btn-secondary">About</a></li>
+                    <li><a href="services.html" class="btn btn-secondary">Services</a></li>
+                    <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
+                    <li><a href="contact.html" class="btn btn-secondary active" aria-current="page">Contact</a></li>
+                    <li><a href="references.html" class="btn btn-secondary">References</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav aria-label="Main navigation">
-            <ul class="menu">
-                <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
-                <li><a href="about.html" class="btn btn-secondary">About</a></li>
-                <li><a href="services.html" class="btn btn-secondary">Services</a></li>
-                <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
-                <li><a href="contact.html" class="btn btn-secondary active">Contact</a></li>
-                <li><a href="references.html" class="btn btn-secondary">References</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-
+    </header>
 
     <!-- Contact -->
     <section id="contact" class="container-fluid">
-        <h2 class="section-title">Contact me</h2>
+        <h1 class="section-title">Contact me</h1>
 
         <div class="contact-layout">
             <figure class="contact-media">
-                <img src="../assets/img/Contact photo.png" alt="Contact illustration">
+                <img src="../assets/img/Contact photo.png" alt="Ilustración de contacto" loading="lazy"
+                    decoding="async">
             </figure>
 
             <form class="contact-form" action="#" method="post" novalidate>
                 <div class="field">
-                    <label for="name">Nombre</label>
-                    <input type="text" id="name" name="name" placeholder="Ingresar nombre">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name"
+                        placeholder="Your full name — so I can address you properly" autocomplete="name" />
                 </div>
 
                 <div class="field">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Ingresar email">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" name="email" placeholder="you@company.com — I’ll send my reply here"
+                        autocomplete="email" inputmode="email" />
                 </div>
 
                 <div class="field">
-                    <label for="project">Acerca del proyecto</label>
+                    <label for="project">Tell me about the project</label>
                     <textarea id="project" name="project" rows="6"
-                        placeholder="Ingresar información extra sobre el proyecto"></textarea>
+                        placeholder="Goals, target users & deadline — helps me scope and estimate"></textarea>
                 </div>
 
                 <div class="checks">
-                    <p class="checks-title">¿Cómo te puedo ayudar?</p>
+                    <p class="checks-title">How do you think I could help you?</p>
                     <div class="checks-list">
                         <label class="check-item">
-                            <input class="check" type="checkbox" name="help" value="web">
+                            <input class="check" type="checkbox" name="help" value="web" />
                             <span>Website design</span>
                         </label>
                         <label class="check-item">
-                            <input class="check" type="checkbox" name="help" value="app">
+                            <input class="check" type="checkbox" name="help" value="app" />
                             <span>App design</span>
                         </label>
                         <label class="check-item">
-                            <input class="check" type="checkbox" name="help" value="research">
+                            <input class="check" type="checkbox" name="help" value="research" />
                             <span>Research</span>
                         </label>
                         <label class="check-item">
-                            <input class="check" type="checkbox" name="help" value="proto">
+                            <input class="check" type="checkbox" name="help" value="proto" />
                             <span>Prototyping</span>
                         </label>
                         <label class="check-item">
-                            <input class="check" type="checkbox" name="help" value="comm">
+                            <input class="check" type="checkbox" name="help" value="comm" />
                             <span>Project communication</span>
                         </label>
                     </div>
                 </div>
 
-                <a href="#" class="btn">SEND MESSAGE</a>
+                <button type="submit" class="btn">SEND MESSAGE</button>
             </form>
         </div>
     </section>
 
-
-
-    <!-- Footer  -->
+    <!-- Footer -->
     <footer class="container-fluid">
-        <div class="social-icons" aria-label="Social links">
-            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
+        <div class="social-icons" aria-label="Enlaces a redes">
+            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp" loading="lazy" decoding="async">
             </a>
-            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
+            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn" loading="lazy" decoding="async">
             </a>
-            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="../assets/img/BehanceLogo.png" alt="Behance">
+            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance" loading="lazy" decoding="async">
             </a>
         </div>
 
@@ -109,9 +135,10 @@
         <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
 
-    <!-- JS de Bootstrap -->
+    <!-- JS (CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
