--- a/pages/services.html
+++ b/pages/services.html
@@ -4,31 +4,55 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Servicios — Matías Lovecchio</title>
+
+    <!-- SEO básico -->
+    <title>Services — Matías Lovecchio Skamelka</title>
+    <meta name="description"
+        content="Servicios de diseño UX/UI: research, prototipado interactivo, visual design y consultoría. Enfoque en usabilidad, accesibilidad y productos digitales." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://dimatiaslovecchio.xo.je/pages/services.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:site_name" content="Matías Lovecchio Skamelka — Portfolio" />
+    <meta property="og:title" content="Services — Matías Lovecchio Skamelka" />
+    <meta property="og:description"
+        content="UX/UI, prototipado interactivo, visual design y consultoría para productos digitales." />
+    <meta property="og:url" content="https://dimatiaslovecchio.xo.je/pages/services.html" />
+    <meta property="og:image" content="https://dimatiaslovecchio.xo.je/assets/img/og-image.png" />
+    <meta property="og:image:alt" content="Vista previa del portfolio de Matías Lovecchio Skamelka" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Favicon (PNG) -->
+    <link rel="icon" type="image/png" href="../assets/img/favicon.png" sizes="32x32" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 
 <body>
+    <!-- Accesibilidad: salto a contenido -->
+    <a class="visually-hidden-focusable" href="#services">Saltar al contenido</a>
 
     <!-- Header -->
-    <header>
+    <header role="banner">
         <div class="header-container container-fluid px-3 px-md-4">
             <div class="logo">
-                <a href="../index.html">
-                    <img src="../assets/img/logo.png" alt="Logo" width="60" height="60" />
+                <a href="../index.html" aria-label="Ir al inicio">
+                    <img src="../assets/img/logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60"
+                        decoding="async" />
                 </a>
             </div>
-            <nav aria-label="Main navigation">
+            <nav aria-label="Navegación principal">
                 <ul class="menu">
                     <li><a href="../index.html" class="btn btn-secondary">Home</a></li>
                     <li><a href="about.html" class="btn btn-secondary">About</a></li>
-                    <li><a href="services.html" class="btn btn-secondary active">Services</a></li>
+                    <li><a href="services.html" class="btn btn-secondary active" aria-current="page">Services</a></li>
                     <li><a href="projects.html" class="btn btn-secondary">Projects</a></li>
                     <li><a href="contact.html" class="btn btn-secondary">Contact</a></li>
                     <li><a href="references.html" class="btn btn-secondary">References</a></li>
@@ -39,105 +63,110 @@
 
     <!-- Services -->
     <section id="services" class="container-fluid">
-        <!-- 1) Services  -->
+        <div class="nav-spacer" aria-hidden="true"></div>
+
+        <!-- Encabezado de sección -->
         <div class="svc-block">
-            <h2 class="section-title">Servicios</h2>
+            <div class="section-head">
+                <h1 class="section-title">Services</h1>
+                <div class="desc-rail">
+                    <p class="section-desc">
+                        I design clear and attractive interfaces focused on the user.
+                        I turn ideas into intuitive digital experiences.
+                        I combine industrial design and UX/UI to create functional and innovative solutions.
+                    </p>
+                </div>
+            </div>
 
+            <!-- Tarjetas de servicios -->
             <div class="services-container">
-                <!-- Card 1 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="../assets/img/services 1.png" alt="Icono diseño centrado en el usuario"
-                            class="service-icon" />
-                        <h3>Diseño centrado en el usuario</h3>
+                        <img src="../assets/img/services 1.png" alt="Icono de diseño centrado en el usuario"
+                            class="service-icon" loading="lazy" decoding="async" />
+                        <h2 class="h3">User Experience</h2>
                     </div>
-                    <p>Cada proyecto parte de la empatía con el usuario para crear interfaces intuitivas,
-                        accesibles y fáciles de navegar.</p>
+                    <p>Each project begins with empathy for the user to create intuitive, accessible, and
+                        easy-to-navigate interfaces.</p>
                 </div>
 
-                <!-- Card 2 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="../assets/img/service 2.png" alt="Icono Prototipado" class="service-icon" />
-                        <h3>Prototipos interactivos</h3>
+                        <img src="../assets/img/service 2.png" alt="Icono de prototipado" class="service-icon"
+                            loading="lazy" decoding="async" />
+                        <h2 class="h3">Interactive Prototypes</h2>
                     </div>
-                    <p>Realizo prototipos funcionales que permiten validar ideas y flujos antes del desarrollo,
-                        ahorrando tiempo y optimizando resultados.</p>
+                    <p>I create functional prototypes that allow ideas and flows to be validated before development,
+                        saving time and optimizing results.</p>
                 </div>
 
-                <!-- Card 3 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="../assets/img/service 3.png" alt="Icono Diseño visual" class="service-icon" />
-                        <h3>Diseño visual</h3>
+                        <img src="../assets/img/service 3.png" alt="Icono de diseño visual" class="service-icon"
+                            loading="lazy" decoding="async" />
+                        <h2 class="h3">Visual Design</h2>
                     </div>
-                    <p>Cuido la estética cuidando cada detalle, desde la tipografía hasta la paleta de colores,
-                        para generar una identidad visual única y memorable.</p>
+                    <p>I take care of aesthetics by paying attention to every detail, from typography to color palettes,
+                        to create a unique and memorable visual identity.</p>
                 </div>
 
-                <!-- Card 4 -->
                 <div class="service-card">
                     <div class="service-title">
-                        <img src="../assets/img/service 4.png" alt="Icono Asesoramiento" class="service-icon" />
-                        <h3>Asesoramiento</h3>
+                        <img src="../assets/img/service 4.png" alt="Icono de consultoría" class="service-icon"
+                            loading="lazy" decoding="async" />
+                        <h2 class="h3">Consulting</h2>
                     </div>
-                    <p>Ofrezco asesoría personalizada para mejorar la experiencia y el diseño de tus productos
-                        digitales, optimizando usabilidad, accesibilidad y resultados según tus objetivos.</p>
+                    <p>I offer personalized consulting to improve the experience and design of your digital products,
+                        optimizing usability, accessibility, and results according to your goals.</p>
                 </div>
             </div>
         </div>
 
-        <!-- 2) Hard Skills -->
+        <!-- Hard Skills -->
         <div class="svc-block">
             <h2 class="section-title">Hard Skills</h2>
             <div class="skills-box">
                 <div class="chips-row row1">
-                    <span class="tag">UI Design</span>
-                    <span class="tag">UX Design</span>
-                    <span class="tag">Responsive</span>
-                    <span class="tag">Prototyping</span>
-                    <span class="tag">Usability</span>
-                    <span class="tag">Design Systems</span>
+                    <span class="tag">UI Design</span><span class="tag">UX Design</span><span
+                        class="tag">Responsive</span>
+                    <span class="tag">Prototyping</span><span class="tag">Usability</span><span class="tag">Design
+                        Systems</span>
                     <span class="tag">HTML/CSS</span>
                 </div>
                 <div class="chips-row row2">
-                    <span class="tag">3D Design</span>
-                    <span class="tag">Design Thinking</span>
+                    <span class="tag">3D Design</span><span class="tag">Design Thinking</span>
                     <span class="tag">Process Documentation</span>
                 </div>
             </div>
         </div>
 
-        <!-- 3) Soft Skills -->
+        <!-- Soft Skills -->
         <div class="svc-block svc-soft">
             <div class="skills-box">
                 <div class="chips-row row1">
-                    <span class="tag">Critical Analysis</span>
-                    <span class="tag">Effective Communication</span>
-                    <span class="tag">User Empathy</span>
-                    <span class="tag">Collaborative Work</span>
-                    <span class="tag">Multitasking</span>
+                    <span class="tag">Critical Analysis</span><span class="tag">Effective Communication</span>
+                    <span class="tag">User Empathy</span><span class="tag">Collaborative Work</span><span
+                        class="tag">Multitasking</span>
                 </div>
                 <div class="chips-row row2">
-                    <span class="tag">Attention to Detail</span>
-                    <span class="tag">Leadership</span>
+                    <span class="tag">Attention to Detail</span><span class="tag">Leadership</span>
                 </div>
             </div>
             <h2 class="section-title">Soft Skills</h2>
         </div>
     </section>
 
-    <!-- Footer  -->
+    <!-- Footer -->
     <footer class="container-fluid">
-        <div class="social-icons" aria-label="Social links">
-            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener">
-                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp">
+        <div class="social-icons" aria-label="Enlaces a redes">
+            <a href="https://wa.me/5493512630020" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/WhatsappLogo.png" alt="WhatsApp" loading="lazy" decoding="async" />
             </a>
-            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener">
-                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn">
+            <a href="https://www.linkedin.com/in/lovecchiomatias/" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/LinkedinLogo.png" alt="LinkedIn" loading="lazy" decoding="async" />
             </a>
-            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener">
-                <img src="../assets/img/BehanceLogo.png" alt="Behance">
+            <a href="https://www.behance.net/matiaslovecchio" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/BehanceLogo.png" alt="Behance" loading="lazy" decoding="async" />
             </a>
         </div>
 
@@ -145,7 +174,7 @@
         <p class="copyright">© 2025 copyright all right reserved</p>
     </footer>
 
-    <!-- JS de Bootstrap -->
+    <!-- JS (CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
