chore: actualizar estilos SCSS y navbar activo

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
         <div class="header-container container-fluid px-3 px-md-4">
             <div class="logo">
                 <a href="../index.html" aria-label="Ir al inicio">
-                    <img src="../assets/img/logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60"
+                    <img src="../assets/img/Logo.png" alt="Logo de Matías Lovecchio Skamelka" width="60" height="60"
                         decoding="async" />
                 </a>
             </div>
